# work-rpa

./: .env.example  .gitignore  pyproject.toml  requirements.txt  setup.py
docs/: business-flow.md  requirements.md
src/: main.py
src/agents/: __init__.py  base_agent.py  image_processor.py  ocr_agent.py  orchestrator.py
src/config/: settings.py
src/models/: __init__.py  data_models.py
src/ocr_engines/: __init__.py  azure_engine.py  base_engine.py  engine_factory.py  gemini_engine.py  tesseract_engine.py
src/ui/: image_canvas.py  result_panel.py
